--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-django
-gunicorn
-psycopg2-binary
-python-dateutil
+asgiref>=3.2.10
+Django>=3.1.1
+gunicorn>=20.0.4
+psycopg2>=2.8.5
+psycopg2-binary>=2.8.5
+python-dateutil>=2.8.1
+pytz>=2020.1
+six>=1.15.0
+sqlparse>=0.3.1
